infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-platform-ingress
  namespace: platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: idp.localtest.me
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: api.idp.localtest.me
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /catalog(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-catalog-service
                port:
                  number: 80
          - path: /repository(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: repository-service
                port:
                  number: 80
          - path: /template(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: template-service
                port:
                  number: 80
